# Miniprosjekt

./: .gitignore  .python-version  .python-versionWin  README.md  main.py  pyproject.toml  readme.txt  repos.db
src/apps/: Chinh.py  Kristoffer.py  Michael.py  T_Feature_App.py  Willads.py
src/apps/kalk/: Operatør.py  Start.py  Valg.py
src/apps/t_feature/: app.py  databasemanager.py  helpers.py  inner_tui.py  logger.py
src/apps/t_feature/src/utils/: cli.py
src/apps/t_feature/templates/: log_messages.py  regex_patterns.py  sql_queries.py
src/utils/: __init__.py  cli.py  main_tui.py
